--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -4,3 +4,11 @@ debug=false
 logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
 
 server.port=${SERVER_PORT}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
