--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -5,6 +5,9 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
 
 server.port=${SERVER_PORT}
 
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=none
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
@@ -12,3 +15,5 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+
+jwt.secret=${JWT_SECRET}
