Fix CORS cookies issues

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,14 +4,12 @@ debug=false
 logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
 
 server.port=${SERVER_PORT}
+server.cors.allowed-origins=${SERVER_CORS_ALLOWED_ORIGINS}
 
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.same-site=none
-
-server.ssl.key-store=${SSL_KEY_STORE}
-server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=lifelink
+server.servlet.session.cookie.path=/
+server.forward-headers-strategy=native
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
