--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ debug=false
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
+server.cors.allowed-origins=*
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=
 spring.datasource.username=
