--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,12 @@ spring.datasource.username=
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
